# ttaf_land_cover_classification

./: CMakeLists.txt  CalcParams.cpp  CalcParams.h  ClassMap.cpp  ClassMap.h  LandCoverParams.h  LasPoint.cpp  LasPoint.h  LidarClassProcess.cpp  PointCloudData.cpp  PointCloudData.h  README.md  ReadWriteData.cpp  ReadWriteData.h  ttaf_specifikacio.docx
doc/: specifikacio.md
results/berg/: lidar_classes.txt  statData.txt
results/delf/: lidar_classes.txt  statData.txt
results/meij/: statData.txt
src/: CMakeLists.txt  CalcParams.cpp  ClassMap.cpp  ClassMap.h  LandCoverParams.cpp  LasPoint.cpp  LasPoint.h  LidarClassProcess.cpp  PointCloudData.cpp  PointCloudData.h  ReadWriteData.cpp  ReadWriteData.h
